--- a/.github/workflows/detect-algorithm-changes.yml
+++ b/.github/workflows/detect-algorithm-changes.yml
@@ -9,8 +9,8 @@ on:
     # Manuel çalıştırma imkanı
   push:
     paths:
-      - '.github/workflows/detect-algorithm-changes.yml'
-      - '.github/scripts/detect-algorithm.js'
+      - './workflows/detect-algorithm-changes.yml'
+      - 'detect-algorithm.js'
 
 jobs:
   detect-changes:
@@ -34,7 +34,7 @@ jobs:
         npm install axios cheerio crypto-js
     
     - name: Run Algorithm Detection
-      run: node .github/scripts/detect-algorithm.js
+      run: node detect-algorithm.js
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
